--- a/src/index.css
+++ b/src/index.css
@@ -45,22 +45,22 @@
 .savat__icons {
   transition: all 0.3s ease;
 }
-.savatga-otish{
+.savatga-otish {
   width: 100%;
-  background-color: #DD1470
+  background-color: #dd1470;
 }
-.bosh-sahifaga-otish__btn{
-  background-color: #DD1470;
+.bosh-sahifaga-otish__btn {
+  background-color: #dd1470;
   margin-top: 20px;
   color: #fff;
   transition: 0.3s;
   padding: 14px 36px;
   border-radius: 10px;
 }
-.bosh-sahifaga-otish__btn:hover{
+.bosh-sahifaga-otish__btn:hover {
   background-color: rgb(172, 32, 95);
 }
-.locations{
+.locations {
   height: 370px;
   overflow: hidden;
   overflow: scroll;
